--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <style>
     /* Music layout by Valentine */
     :root { --cd-image: url('https://fluorescent-lights.neocities.org/Digital-CD-Disk-Vector-Transparent-PNG.png'); }
+    ::-webkit-scrollbar { width: 20px; }
+    ::-webkit-scrollbar-track { background: #dcdedf; }
+    ::-webkit-scrollbar-thumb { background: #bec7c9; border: 2px outset; }
+    ::-webkit-scrollbar-thumb:hover { background: #b5bdbf; }
+
+    
     .profile-pic {
       position: relative;
       width: 140px; /* reduced container width */
@@ -85,8 +91,31 @@
     .anime-bars { display:flex; justify-content:center; flex-wrap:wrap; gap:5px; margin:10px 0; border-top:3px solid #FF00FF; border-bottom:3px solid #FF00FF; padding:5px 0; background:rgba(255,20,147,0.4); }
     .anime-bars img { height:50px; margin:0 3px; }
     a { color:#00FFFF; font-size:20px; font-weight:bold; text-decoration:underline; }
-    .music-section { position: relative; z-index: 2; margin: 30px 0; }
-    .music-button { font-size:40px; padding:20px 50px; background:linear-gradient(45deg,#FF00FF,#FFFF00); color:#000; border:5px groove #FFF; cursor:pointer; box-shadow:0 0 25px #FFFF00; animation:blink-animation 3s infinite; }
+    .music-section {
+      margin: 20px auto;
+      padding: 20px;
+      background: rgba(0, 255, 255, 0.1);
+      border: 3px dashed #FF00FF;
+      width: fit-content;
+      text-align: center;
+      font-family: 'Press Start 2P', monospace;
+      color: #00FFFF;
+      text-shadow: 0 0 5px #FFFFFF;
+    }
+    .music-button {
+      font-family: 'Press Start 2P', monospace;
+      font-size: 18px;
+      padding: 15px 30px;
+      background: linear-gradient(135deg, #FF00FF, #00FFFF, #FFFF00);
+      border: 4px outset #00FF00;
+      color: #000000;
+      text-shadow: 0 0 5px #FFFFFF, 0 0 10px #FFFF00;
+      box-shadow: 0 0 10px #FF00FF, 0 0 20px #00FFFF;
+      cursor: url('https://example.com/2000s-cursor.gif'), auto;
+      animation: blink-animation 1.5s infinite;
+      margin: 10px;
+    }
+
     .small-block { font-size:10px; color:#AAA; margin-top:20px; font-style:italic; }
     .footer { margin:30px 0; font-size:12px; color:#888; }
   </style>
