--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <div class="music-section">
     <button class="music-button" onclick="document.getElementById('party-audio').play()">▶️ Запустить трек!</button>
     <audio id="party-audio">
-      <source src="https://file.garden/aIyvJyj8KjNwLJtX/Party%2BDon%2Bt%2BStop%2B-%2BDarren%2BStyles%2Bx%2BDougal%2B%2B%2BGammer.mp3" type="audio/mpeg">
+      <source src="https://file.garden/aIyvJyj8KjNwLJtX/03%2BSkrillex%2B-%2BKill%2BEVERYBODY.mp3" type="audio/mpeg">
     </audio>
   </div>
 
